[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kulunchick", email = "nikolikrasovski@gmail.com"},
]
dependencies = [
    "sqlalchemy>=2.0.6",
    "alembic>=1.10.2",
    "pydantic>=1.10.6",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.27.0",
    "fastapi>=0.94.1",
    "uvicorn>=0.21.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
