[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.1.1",
    "types-passlib>=1.7.7.12",
    "pylint>=2.17.4",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kulunchick", email = "nikolikrasovski@gmail.com"},
]
dependencies = [
    "sqlalchemy>=2.0.6",
    "alembic>=1.10.2",
    "pydantic>=1.10.6",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.27.0",
    "fastapi>=0.94.1",
    "uvicorn>=0.21.0",
    "email-validator>=1.3.1",
    "passlib>=1.7.4",
    "Authlib>=1.2.0",
    "bcrypt>=4.0.1",
    "fastapi-restful>=0.4.3",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true